<resources>
    <string name="app_name">Vkurse</string>
    <integer name="com_vk_sdk_AppId">6116804</integer>

    <string name="item_title">Title</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="item_subtitle">Subhead</string>
    <string name="text_post_description">Post text</string>
    <string name="show_more">Показать полностью…</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="list_subhead_text">Глобальный поиск</string>
    <string name="itemGroupName">[GroupName]</string>
    <string name="error_toast">Проблемы с сетью</string>
    <string name="error_button_text">Запусти сервак</string>
    <string name="repost_subhead">RepostSubhead</string>
    <string name="repost_title">RepostTitle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
